--- a/OptusWeather/OptusWeather/ErrorView.xib
+++ b/OptusWeather/OptusWeather/ErrorView.xib
@@ -19,12 +19,12 @@
             <rect key="frame" x="0.0" y="0.0" width="400" height="400"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view alpha="0.69999999999999996" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JoE-6F-FSs" customClass="OverlayBackgroundView" customModule="OptusWeather" customModuleProvider="target">
-                    <rect key="frame" x="90" y="150" width="220" height="100"/>
+                <view alpha="0.80000000000000004" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JoE-6F-FSs" customClass="OverlayBackgroundView" customModule="OptusWeather" customModuleProvider="target">
+                    <rect key="frame" x="90" y="140" width="220" height="120"/>
                     <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="220" id="HHB-bb-9Zh"/>
-                        <constraint firstAttribute="height" constant="100" id="e6w-Ts-WpR"/>
+                        <constraint firstAttribute="height" constant="120" id="e6w-Ts-WpR"/>
                     </constraints>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
@@ -33,22 +33,36 @@
                     </userDefinedRuntimeAttributes>
                 </view>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loading problem 😢" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="osR-lO-De6">
-                    <rect key="frame" x="109" y="173" width="181" height="24"/>
+                    <rect key="frame" x="109" y="168" width="181" height="24"/>
                     <fontDescription key="fontDescription" type="system" pointSize="20"/>
                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="caF-Am-VhF">
-                    <rect key="frame" x="172.5" y="200" width="55" height="30"/>
-                    <state key="normal" title="[ Retry ]">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="caF-Am-VhF" customClass="RoundedButton" customModule="OptusWeather" customModuleProvider="target">
+                    <rect key="frame" x="170" y="210" width="60" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="60" id="1jA-45-75D"/>
+                    </constraints>
+                    <state key="normal" title="  Retry  ">
                         <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="deviceRGB"/>
                     </state>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                            <real key="value" value="5"/>
+                        </userDefinedRuntimeAttribute>
+                        <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                            <color key="value" red="1" green="1" blue="1" alpha="1" colorSpace="deviceRGB"/>
+                        </userDefinedRuntimeAttribute>
+                        <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                            <real key="value" value="1"/>
+                        </userDefinedRuntimeAttribute>
+                    </userDefinedRuntimeAttributes>
                 </button>
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="osR-lO-De6" firstAttribute="centerY" secondItem="JoE-6F-FSs" secondAttribute="centerY" constant="-15" id="GGg-EF-O8h"/>
-                <constraint firstItem="caF-Am-VhF" firstAttribute="centerY" secondItem="JoE-6F-FSs" secondAttribute="centerY" constant="15" id="amF-Ka-tsU"/>
+                <constraint firstItem="osR-lO-De6" firstAttribute="centerY" secondItem="JoE-6F-FSs" secondAttribute="centerY" constant="-20" id="GGg-EF-O8h"/>
+                <constraint firstItem="caF-Am-VhF" firstAttribute="centerY" secondItem="JoE-6F-FSs" secondAttribute="centerY" constant="25" id="amF-Ka-tsU"/>
                 <constraint firstItem="JoE-6F-FSs" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="cFn-3H-IUp"/>
                 <constraint firstItem="caF-Am-VhF" firstAttribute="centerX" secondItem="JoE-6F-FSs" secondAttribute="centerX" id="giu-rW-s3o"/>
                 <constraint firstItem="osR-lO-De6" firstAttribute="centerX" secondItem="JoE-6F-FSs" secondAttribute="centerX" id="nmv-8p-1Jj"/>
